# wrknv

./: .coverage  .gitguardian.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .rsp_context.json  .trufflehog-exclude-paths.txt  2025-08-09-this-session-is-being-continued-from-a-previous-wrkenv.txt  20250811-1345-getting-wrkenv-more-better.txt  20250815-1420-working-through-wrkenv.txt  20250818-1205-flavor-building.txt  AGENTS.md  ARCHITECTURE.md  BFILES_INTEGRATION_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  COMMAND_LOADING_REFACTOR_PLAN.md  CONTRIBUTING.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  Makefile  Makefile.backup.20251110  PACKAGE_INTEGRATION.md  README.md  REUSE.toml  SESSION_STATUS.md  SUMMARY.md  TEST_FIXES_FINAL_SUMMARY.md  TEST_FIXES_SESSION_2.md  TEST_FIXES_SUMMARY.md  TEST_RESULTS.md  TEST_STATUS.md  TODO.md  WRKNV_BUILD_ORCHESTRATION_ANALYSIS.md  container-env.sh  env.ps1  env.sh  fix_env_imports.py  migrate_commands.py  (+11 more)
.claude/: settings.local.json
.dev/: TODO.md
.github/: dependabot.yml  workflow-config.yml
.github/workflows/: ci.yml  publish.yml  release.yml  security.yml  test-setup-action.yml  validate.yml
.provide/foundry/: base-mkdocs.yml  gen_ref_pages.py
archive/scripts/: add_spdx_headers.py  validate_spdx_headers.py
cache/: tofu_1.9.0_SHA256SUMS
ci/: check_licenses.py  parse_bandit.py  validate_workflows.sh
data/: config.json
docs/: DESIGN_AND_STRATEGY.md  INTEGRATION_STATUS.md  README.md  SIBLINGS_CONFIGURATION.md  SOUP_SPECIFIC_CHANGES.md  TODO.md  TOFUSOUP_INTEGRATION.md  index.md
docs/api/: SUMMARY.md  config.md  gitignore.md  index.md  package.md
docs/archive/: CONTINUATION_PLAN.md  GEMINI.md  PYPROJECT_ECOSYSTEM_ALIGNMENT.md  SESSION_STATUS.md  WRKNV_CODE_EXAMPLES.md  WRKNV_DOCUMENTATION_INDEX.md  WRKNV_QUICK_REFERENCE.md
docs/css/: provide-theme.css  termynal.css
docs/features/: security-scanning.md  task-runner.md  task-system.md  we-cli-reference.md  workspace-orchestration.md
docs/getting-started/: concepts.md  index.md  installation.md  quick-start.md
docs/guides/: makefile-migration.md
docs/js/: custom.js  mermaid-init.js  termynal.js
docs/reference/: SUMMARY.md  configuration.md  wrknv-toml.md
docs/stale/: 20250810-2030-fuckin-around-with-the-wrkenv.txt  BUNDLER_PROPOSAL.md
docs/wrknv/: errors.md  lockfile.md
examples/nested-tasks/: README.md  wrknv.toml
examples/simple-tasks/: README.md  wrknv.toml
keys/: provider-private.key  provider-public.key
mutants/: env.ps1  env.sh  pyproject.toml
mutants/tests/: __init__.py
scraps/: 20250815-1420-working-through-wrkenv.txt  new_gitignore.py  original_gitignore.py  terraform-wrapper.py
scripts/: add_spdx_headers.py  docs_preflight.py  docs_serve.py  docs_validate.py  shell-integration.sh  validate_spdx_headers.py
scripts/memray/: memray_config_parsing_stress.py  memray_task_registry_stress.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/DESIGN_AND_STRATEGY/: index.html
site/TODO/: index.html
site/api/: index.html
site/search/: search_index.json
src/provide/: __init__.py
src/wrkenv/: __init__.py
src/wrkenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/wrknv/: __init__.py  _version.py  errors.py  lockfile.py
terraform-provider-test/: .gitignore  pyproject.toml
terraform-provider-test/src/test/: main.py
test_provider/: pyproject.toml
tests/: TESTING_GUIDE.md  __init__.py  conftest.py  test_cli_config_commands.py  test_cli_profile_commands.py  test_cli_setup_command.py  test_container.py  test_container_manager.py  test_data.py  test_env_debug_temp.py  test_errors.py  test_install_operations.py  test_lockfile.py  test_lockfile_extended.py  test_managers.py  test_operations_platform.py  test_pth_check.py  test_python_version_check.py  test_siblings_configuration.py  test_tdd_config_integration.py  test_tdd_cty_integration.py  test_tdd_package_commands.py
tests/cli/: __init__.py  test_auto_detect.py  test_check_command.py  test_check_command_extended.py  test_check_command_pyproject.py  test_config_commands.py  test_config_commands.py.bak  test_container_command.py  test_doctor_command.py  test_doctor_commands.py  test_doctor_coverage.py  test_gitignore_commands.py  test_gitignore_extra_commands.py  test_hub_cli.py  test_lock_command.py  test_lock_commands.py  test_nested_commands.py  test_nested_commands_coverage.py  test_package_commands.py  test_profile_commands.py  test_profile_commands.py.bak2  test_run_commands.py  test_run_coverage.py  test_secrets_command.py  test_security_command.py  test_security_coverage.py  test_setup_command.py  test_terraform_command.py  test_tools_commands.py  test_tools_commands_extended.py  test_visual.py  test_workspace_command.py
tests/config/: test_config_display.py  test_config_sources.py  test_config_validation.py  test_core.py  test_defaults.py  test_integration.py  test_new_config.py  test_persistence.py  test_siblings.py  test_validation.py
tests/container/: test_cli_integration.py  test_container_debug.py  test_container_integration.py  test_container_migration.py  test_container_schema.py  test_container_shell_commands.py  test_container_storage.py  test_container_volume_commands.py  test_core.py  test_dynamic_config.py  test_errors.py  test_exec_command.py  test_logs_command.py  test_logs_coverage.py  test_manager.py  test_manager_coverage.py  test_manager_extended.py  test_metadata.py  test_operations.py  test_operations_build_coverage.py  test_operations_exec_coverage.py  test_operations_lifecycle_coverage.py  test_operations_new.py  test_runtime.py  test_runtime_docker_coverage.py  test_shell_command.py  test_shell_commands_coverage.py  test_storage_coverage.py  test_volumes_coverage.py
tests/github/: __init__.py  conftest.py  test_client.py  test_integration.py
tests/gitignore/: test_builder.py  test_detector.py  test_detector_coverage.py  test_manager.py  test_templates.py
tests/logging/: test_logging.py
tests/managers/: test_bao.py  test_base.py  test_base_coverage.py  test_base_extended.py  test_factory.py  (+2 more)
(+699 files in other folders)
