[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrknv"
version = "0.1.0"
description = "🧰🌍 Work Environment - Foundation for the provide.io ecosystem"
authors = [
    {name = "Provide.io", email = "engineering@provide.io"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "packaging>=23.0",
    "semver>=3.0.0",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
    "attrs>=23.0.0",
    "cattrs>=23.0.0",
    "pyvider-telemetry>=0.0.15",
]

[project.optional-dependencies]
package = [
    # "flavor",  # Install with: uv pip install -e ~/code/gh/provide-io/flavor
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "bandit>=1.7.0",
]

[project.scripts]
wrknv = "wrknv.wenv.cli:entry_point"

[project.urls]
"Homepage" = "https://github.com/provide-io/wrknv"
"Bug Tracker" = "https://github.com/provide-io/wrknv/issues"
"Documentation" = "https://github.com/provide-io/wrknv#readme"
"Source Code" = "https://github.com/provide-io/wrknv"

[tool.setuptools]
packages = [
    "wrknv", 
    "wrknv.wenv", 
    "wrknv.wenv.managers", 
    "wrknv.wenv.operations", 
    "wrknv.package"
]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
wrknv = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'

################################################################################
# Ruff Linter and Formatter Configuration
################################################################################

[tool.ruff]
line-length = 111
indent-width = 4
target-version = "py311"
extend-exclude = ["scraps"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "C90", "SIM", "PTH", "RUF"]
ignore = ["ANN401", "B008", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["wrknv", "tests"]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

################################################################################
# MyPy Static Type Checker Configuration
################################################################################

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "packaging.*",
    "semver.*",
    "rich.*",
    "jinja2.*",
    "cattrs.*",
    "tomli_w.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "cli: CLI command tests",
    "config: Configuration tests",
    "container: Container management tests",
    "package: Package management tests",
    "operations: File and platform operations tests",
    "managers: Tool manager tests",
    "slow: Slow running tests",
    "network: Tests requiring network access",
]
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore::RuntimeWarning",
    "ignore::DeprecationWarning:tarfile",
]

[tool.coverage.run]
source = ["src/wrknv"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
]

[tool.flavor]
# Configuration for packaging wrknv with flavor
entry_point = "wrknv.wenv.cli:entry_point"
app_name = "wrknv"
description = "🧰🌍 Work Environment - Foundation for the provide.io ecosystem"
