# pyproject.toml for terraform-provider-test

[project]
name = "terraform-provider-test"
version = "0.1.0"
description = "A Terraform provider for test, built with Pyvider."
requires-python = ">=3.13"
dependencies = [
    "pyvider>=0.1.0",
]

[project.scripts]
"terraform-provider-test" = "test.main:serve"

[build-system]
requires = ["pspf>=0.1.0"]
build-backend = "pspf.build_backend"

[tool.pspf]
provider_name = "test"
entry_point = "test.main:serve"
python_version = "3.13"
targets = []

[tool.pspf.build]
dependencies = []
exclude = [
    "**/.terraform/**",
    "**/.venv/**",
    "**/__pycache__/**",
]

[tool.pspf.signing]
private_key_path = "keys/provider-private.key"
public_key_path = "keys/provider-public.key"