[project]
name = "provider-example"
version = "0.1.0"
description = "Example Terraform provider"
requires-python = ">=3.12"

[tool.flavor]
provider_name = "example"
entry_point = "provider.main:serve"

[tool.flavor.signing]
private_key_path = "keys/provider-private.key"
public_key_path = "keys/provider-public.key"
curve = "P-256"
